1999-03-25  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (compare_java_objects): Use direct comparison of 
	java_object fields instead of IsSameObject.
	(java_directory_java_find): Make sure that global references that
	are not needed are deleted and that update gets a local reference.
	(java_directory_update): Move the creation of global references into
	the update.
	(java_instantiate): Remove global reference creation.
		
1999-03-24  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.h: Facilitate addition of uniformDblRand to directory.

	* directory.m: Likewise.

	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): 
	Likewise.
	
1999-03-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* JavaProxy.m ([JavaProxy -forward::]): Use *info.type,
	not *type (which is the next one).

	* directory.m (java_ensure_selector): Force starting argument
	position to 8.  Add object and selector.

	* JavaProxy.m ([JavaProxy -forward::]): Skip object and selector;
	they are provided in FCall setMethod:inObject.

	* directory.m (create_class_refs): New internal function
	find_primitive.  Rename find to do non-primitive lookup.

	* directory.h (JINSTANTIATEUSING): Remove FROMCLASS and FROMOBJECT
	variants.  All are objects.

	* directory.m (java_ensure_selector): Add internal classp for
	type checking.

1999-03-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (java_directory_init): Add jglobalZone argument;
	don't do lookup in environment.

	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): Pass
	globalZone Java object to java_directory_init.

	* directory.m (create_class_refs): Look in swarmEnvironment
	object, not class for globalZone instance variable.

	* directory.[hm] (java_directory_init): Add swarmEnvironment arg.

	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): 
	Accomodate.

	* JavaProxy.m ([JavaProxy -forward::]): Use
	addArgument:ofObjCType: instead of switch.  Create and perform the
	FCall.
